--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "method-override": "^3.0.0",
+    "mongodb": "^5.4.0",
     "morgan": "^1.10.0",
-    "nodemon": "2.0.15",
-    "node-fetch": "*"
+    "node-fetch": "*",
+    "nodemon": "2.0.15"
   }
 }
